# resolver

./: .dockerignore  .gitignore  .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.test.yaml  docker-compose.test.yml  docker-compose.yaml  pyproject.toml  python-template.py  requirements.txt  resolver.py
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/workflows/: dependabot-approve-and-merge.yaml  docker-build-container.yaml  docker-push-containers-to-dockerhub.yaml  docker-verify-refreshed-at-updated.yaml  pylint.yaml  spellcheck.yaml
docs/: README.md  alternate-installations.md  debian-based-installation.md  demonstrate-using-command-line.md  demonstrate-using-docker-compose.md  demonstrate-using-docker.md  demonstrate-using-kubernetes-and-helm.md  development.md  errors.md  examples.md  rpm-based-installation.md
helm-values-templates/: init-container.yaml  resolver.yaml  senzing-console.yaml  senzing-debug.yaml  senzing-init-container.yaml  senzing-package.yaml  senzing-resolver.yaml  senzing-yum-localinstall.yaml  senzing-yum.yaml
rootfs/var/opt/senzing/sqlite/: G2C.db
src/: yum-packages.txt
test/: test-data-1.json
